--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-dom": "^17.0.2",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.16",
     "@types/react": "^17.0.37",
-    "react-bootstrap": "^2.0.4",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "firebase": "^9.6.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
